--- a/web-client/public/index.html
+++ b/web-client/public/index.html
@@ -4,26 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Server Streaming Example</title>
-    <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
-    <script src="./index.js"></script>
 </head>
 
 <body>
-    <!-- <div class="container">
-        <div class="row" id="first"> -->
-            <div class="form-group">
-                <div class="input-group">
-                    <input type="text" class="form-control" id="msg">
-                    <span class="input-group-btn">
-                        <button class="btn btn-primary" type="button" id="send" onclick="getLiveData()">Get Live Data</button>
-                    </span>
-                </div>
-                <p id="title">Live data:</p>
-                <p id="data"></p>
-            </div>
-        <!-- </div>
-    </div> -->
+    <div class="form-group">
+        <div class="input-group">
+            <span class="input-group-btn">
+                <button class="btn btn-primary" type="button" id="send" onclick="getLiveData()">Get Live Data</button>
+            </span>
+        </div>
+        <p id="title">Live data:</p>
+        <p id="data"></p>
+    </div>
 </body>
+
+<script type="text/javascript" src="./index.js"></script>
 
 </html>
