--- a/web-client/public/index.html
+++ b/web-client/public/index.html
@@ -10,7 +10,7 @@
     <div class="form-group">
         <div class="input-group">
             <span class="input-group-btn">
-                <button class="btn btn-primary" type="button" id="send" onclick="getLiveData()">Get Live Data</button>
+                <button class="btn btn-primary" type="button" id="send">Get Live Data</button>
             </span>
         </div>
         <p id="title">Live data:</p>
